# AMQP_RS

./: Cargo.toml  README.md
src/: body.rs  client.rs  client_connection.rs  common.rs  communication.rs  connection_parameters.rs  constants.rs  consumer.rs  content.rs  decode.rs  endec.rs  errors.rs  lib.rs  main.rs  properties.rs  publisher.rs  tcp.rs  types.rs
src/encde/: bits.rs  exchange_type.rs  header.rs  long_string.rs  method.rs  mod.rs  properties.rs  raw_bytes.rs  short_string.rs  table.rs
src/endec/: bits.rs  class.rs  header.rs  long_string.rs  mod.rs  properties.rs  raw_bytes.rs  short_string.rs  start.rs  table.rs
src/frame/: basic.rs  body.rs  channel.rs  connection.rs  content.rs  exchange.rs  mod.rs  queue.rs  transaction.rs
src/method/: basic.rs  channel.rs  connection.rs  mod.rs  queue.rs
src/types/: message.rs  mod.rs  queue_definition.rs
