[package]
name = "byteflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "byteflow"


[dependencies]
tokio = { version = "1.37", features = ["net", "rt", "macros", "full"] }
bincode = {version = "=2.0.0-rc.3", features = ["alloc", "derive"]}
